[gd_scene load_steps=9 format=2]

[ext_resource path="res://SubmitHighScore.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Kenney Mini.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Fonts/Kenney Mini Square.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://ShopTiles.tres" type="TileSet" id=4]
[ext_resource path="res://UI/CauldronButtonNormal.tres" type="StyleBox" id=5]

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 3 )

[node name="SubmitHighScore" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -9.41083
margin_top = -6.52974
margin_right = 527.589
margin_bottom = 266.47
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 118.0
margin_top = 57.0
margin_right = 393.0
margin_bottom = 198.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 275.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 3 )
text = "PAYDAY!"
align = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 275.0
margin_bottom = 141.0
size_flags_vertical = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/HBoxContainer2"]
margin_right = 150.0
margin_bottom = 97.0
rect_min_size = Vector2( 150, 0 )

[node name="RichTextLabel" type="RichTextLabel" parent="CenterContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
margin_right = 150.0
margin_bottom = 33.0
text = "Your shift has finally ended, and the manager has returned.  Time to get paid!"
fit_content_height = true

[node name="Paystub" type="GridContainer" parent="CenterContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
margin_top = 37.0
margin_right = 150.0
margin_bottom = 97.0
custom_constants/vseparation = 0
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HoursLabel" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer2/VBoxContainer/Paystub"]
margin_right = 63.0
margin_bottom = 10.0
text = "Hours worked:"

[node name="HoursAmt" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer2/VBoxContainer/Paystub"]
margin_left = 67.0
margin_right = 67.0
margin_bottom = 10.0

[node name="RateLabel" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer2/VBoxContainer/Paystub"]
margin_top = 10.0
margin_right = 63.0
margin_bottom = 20.0
text = "Pay rate:"

[node name="RateAmt" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer2/VBoxContainer/Paystub"]
margin_left = 67.0
margin_top = 10.0
margin_right = 67.0
margin_bottom = 20.0

[node name="GrossLabel" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer2/VBoxContainer/Paystub"]
margin_top = 20.0
margin_right = 63.0
margin_bottom = 30.0
text = "Gross wages:"

[node name="GrossAmt" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer2/VBoxContainer/Paystub"]
margin_left = 67.0
margin_top = 20.0
margin_right = 67.0
margin_bottom = 30.0

[node name="TaxLabel" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer2/VBoxContainer/Paystub"]
margin_top = 30.0
margin_right = 63.0
margin_bottom = 40.0
text = "Realm Tax rate:"

[node name="TaxAmt" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer2/VBoxContainer/Paystub"]
margin_left = 67.0
margin_top = 30.0
margin_right = 67.0
margin_bottom = 40.0

[node name="MonstercareLabel" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer2/VBoxContainer/Paystub"]
margin_top = 40.0
margin_right = 63.0
margin_bottom = 50.0
text = "Monstercare:"

[node name="MonstercareAmt" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer2/VBoxContainer/Paystub"]
margin_left = 67.0
margin_top = 40.0
margin_right = 67.0
margin_bottom = 50.0

[node name="NetWagesLabel" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer2/VBoxContainer/Paystub"]
margin_top = 50.0
margin_right = 63.0
margin_bottom = 60.0
text = "NET WAGES:"

[node name="NetWagesAmt" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer2/VBoxContainer/Paystub"]
margin_left = 67.0
margin_top = 50.0
margin_right = 67.0
margin_bottom = 60.0

[node name="VBoxContainer2" type="VBoxContainer" parent="CenterContainer/VBoxContainer/HBoxContainer2"]
margin_left = 154.0
margin_right = 275.0
margin_bottom = 97.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer2/VBoxContainer2"]
margin_right = 121.0
margin_bottom = 10.0
text = "Sign here for your paycheck:"

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/HBoxContainer2/VBoxContainer2"]
margin_top = 14.0
margin_right = 121.0
margin_bottom = 34.0
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="CenterContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/HBoxContainer"]
margin_right = 60.0
margin_bottom = 20.0
rect_min_size = Vector2( 60, 0 )
text = "Name"

[node name="Button" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/HBoxContainer"]
margin_left = 64.0
margin_right = 107.0
margin_bottom = 20.0
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )
text = "CONFIRM"

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 4 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 65545, 38, 0, 65548, 38, 0, 131087, 32, 0, 131091, 38, 0, 131095, 38, 0, 196616, 38, 0, 196629, 38, 0, 262154, 38, 0, 262166, 38, 0 )
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="focus_entered" from="CenterContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/HBoxContainer/LineEdit" to="." method="_on_LineEdit_focus_entered"]
[connection signal="text_changed" from="CenterContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/HBoxContainer/LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/HBoxContainer/Button" to="." method="_on_Button_pressed"]
